* Fixed an issue where labels would overlap on the recruiting screen
* Added a Mock Draft
* Made the top 10 in polls extend to top 25
* Fixed some grammar errors in game summary
* Fixed a bug that which caused the app to sign freshmen based on your team's prestige before entering the recruiting period, which made the game easier
* Added a button to get to the app's subreddit - /r/FootballCoach
* Fixed a bug that would not update your rival of your team rebranding
* Overhauled the pool of recruits - there are now 200 total recruits to choose from and fewer blue-chips to sign
* Fixed an issue on the recruiting screen where the stats of a recruit would overlap on 4-in and smaller devices, as well as some iPads
* Rewrote the POTY new story
* Redshirted players get a stat boost after their redshirt season because of their rigorous training
* Added tap-to-dismiss on conference selectors for standings/teams and for team strategies
* Added highlighting of the user's team in the bowl projections and conference standings screens